--- a/app/src/main/res/drawable/ic_empty_contacts.xml
+++ b/app/src/main/res/drawable/ic_empty_contacts.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="120dp"
     android:height="120dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:viewportWidth="120"
+    android:viewportHeight="120">
     <path
-        android:fillColor="#FFCCCCCC"
-        android:pathData="M12,6c1.1,0 2,0.9 2,2s-0.9,2 -2,2 -2,-0.9 -2,-2 0.9,-2 2,-2m0,10c2.7,0 5.8,1.29 6,2L6,18c0.23,-0.72 3.31,-2 6,-2m0,-12C9.79,4 8,5.79 8,8s1.79,4 4,4 4,-1.79 4,-4 -1.79,-4 -4,-4zM12,16c-2.67,0 -8,1.34 -8,4v2h16v-2c0,-2.66 -5.33,-4 -8,-4z"/>
+        android:fillColor="#EEEEEE"
+        android:pathData="M100,0H20v10h80V0zM20,120h80v-10H20V120zM100,20H20c-5.5,0 -10,4.5 -10,10v60c0,5.5 4.5,10 10,10h80c5.5,0 10,-4.5 10,-10V30C110,24.5 105.5,20 100,20zM60,33.8c6.2,0 11.2,5 11.2,11.2s-5,11.2 -11.2,11.2s-11.2,-5 -11.2,-11.2S53.8,33.8 60,33.8zM85,85H35v-7.5c0,-8.3 16.7,-12.5 25,-12.5s25,4.2 25,12.5V85z"/>
 </vector>
