--- a/app/src/main/res/drawable/ic_empty_activities.xml
+++ b/app/src/main/res/drawable/ic_empty_activities.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="120dp"
     android:height="120dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:viewportWidth="120"
+    android:viewportHeight="120">
     <path
-        android:fillColor="#FFCCCCCC"
-        android:pathData="M19,3h-4.18C14.4,1.84 13.3,1 12,1c-1.3,0 -2.4,0.84 -2.82,2L5,3c-1.1,0 -2,0.9 -2,2v14c0,1.1 0.9,2 2,2h14c1.1,0 2,-0.9 2,-2L21,5c0,-1.1 -0.9,-2 -2,-2zM12,3c0.55,0 1,0.45 1,1s-0.45,1 -1,1 -1,-0.45 -1,-1 0.45,-1 1,-1zM16,15h-8c-0.55,0 -1,-0.45 -1,-1s0.45,-1 1,-1h8c0.55,0 1,0.45 1,1s-0.45,1 -1,1zM16,11h-8c-0.55,0 -1,-0.45 -1,-1s0.45,-1 1,-1h8c0.55,0 1,0.45 1,1s-0.45,1 -1,1zM16,7h-8c-0.55,0 -1,-0.45 -1,-1s0.45,-1 1,-1h8c0.55,0 1,0.45 1,1s-0.45,1 -1,1z"/>
+        android:fillColor="#EEEEEE"
+        android:pathData="M95,15H79.1C77,10.4 72.3,7.5 67,7.5c-5.3,0 -10,2.9 -12.1,7.5H25c-5.5,0 -10,4.5 -10,10v70c0,5.5 4.5,10 10,10h70c5.5,0 10,-4.5 10,-10V25C105,19.5 100.5,15 95,15zM67,15c2.8,0 5,2.2 5,5s-2.2,5 -5,5s-5,-2.2 -5,-5S64.2,15 67,15zM85,85H35V75h50V85zM85,65H35V55h50V65zM85,45H35V35h50V45z"/>
 </vector>
