--- a/app/src/main/res/drawable/ic_empty_notifications.xml
+++ b/app/src/main/res/drawable/ic_empty_notifications.xml
@@ -1,9 +1,12 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="120dp"
     android:height="120dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:viewportWidth="120"
+    android:viewportHeight="120">
     <path
-        android:fillColor="#FFCCCCCC"
-        android:pathData="M12,22c1.1,0 2,-0.9 2,-2h-4c0,1.1 0.9,2 2,2zM18,16v-5c0,-3.07 -1.63,-5.64 -4.5,-6.32L13.5,4c0,-0.83 -0.67,-1.5 -1.5,-1.5s-1.5,0.67 -1.5,1.5v0.68C7.64,5.36 6,7.92 6,11v5l-2,2v1h16v-1l-2,-2zM16,17L8,17v-6c0,-2.48 1.51,-4.5 4,-4.5s4,2.02 4,4.5v6z"/>
+        android:fillColor="#EEEEEE"
+        android:pathData="M60,110c5.5,0 10,-4.5 10,-10H50C50,105.5 54.5,110 60,110z"/>
+    <path
+        android:fillColor="#EEEEEE"
+        android:pathData="M90,80V55c0,-15.4 -8.2,-28.2 -22.5,-31.6V20c0,-4.1 -3.4,-7.5 -7.5,-7.5s-7.5,3.4 -7.5,7.5v3.4C38.2,26.8 30,39.6 30,55v25l-10,10v5h80v-5L90,80z"/>
 </vector>
