--- a/app/src/main/res/drawable/ic_empty_messages.xml
+++ b/app/src/main/res/drawable/ic_empty_messages.xml
@@ -1,9 +1,18 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="120dp"
     android:height="120dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:viewportWidth="120"
+    android:viewportHeight="120">
     <path
-        android:fillColor="#FFCCCCCC"
-        android:pathData="M20,4L4,4c-1.1,0 -2,0.9 -2,2v12c0,1.1 0.9,2 2,2h16c1.1,0 2,-0.9 2,-2L22,6c0,-1.1 -0.9,-2 -2,-2zM20,18L4,18L4,8l8,5 8,-5v10zM12,11L4,6h16l-8,5z"/>
+        android:fillColor="#EEEEEE"
+        android:pathData="M100,20H20c-5.5,0 -10,4.5 -10,10v60c0,5.5 4.5,10 10,10h80c5.5,0 10,-4.5 10,-10V30C110,24.5 105.5,20 100,20zM95,85H25V35h70V85z"/>
+    <path
+        android:fillColor="#EEEEEE"
+        android:pathData="M35,45h50v5h-50z"/>
+    <path
+        android:fillColor="#EEEEEE"
+        android:pathData="M35,55h50v5h-50z"/>
+    <path
+        android:fillColor="#EEEEEE"
+        android:pathData="M35,65h30v5h-30z"/>
 </vector>
