--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,25 +3,25 @@
     <item
         android:id="@+id/navigation_home"
         android:icon="@drawable/ic_home"
-        android:title="@string/nav_home" />
+        android:title="@string/title_home" />
 
     <item
         android:id="@+id/navigation_messages"
         android:icon="@drawable/ic_message"
-        android:title="@string/nav_messages" />
+        android:title="@string/title_messages" />
 
     <item
         android:id="@+id/navigation_notifications"
         android:icon="@drawable/ic_notifications"
-        android:title="@string/nav_notifications" />
+        android:title="@string/title_notifications" />
 
     <item
         android:id="@+id/navigation_activities"
         android:icon="@drawable/ic_activities"
-        android:title="@string/nav_activities" />
+        android:title="@string/title_activities" />
 
     <item
         android:id="@+id/navigation_contacts"
         android:icon="@drawable/ic_contacts"
-        android:title="@string/nav_contacts" />
+        android:title="@string/title_contacts" />
 </menu>
